--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,11 @@
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# 站点唯一标识（多租户系统的核心锚点）
+# 每个网站部署时修改此值，确保数据隔离
+# 示例：visual_clause, site_alpha, site_beta
+NEXT_PUBLIC_SITE_KEY=visual_clause
+
 # OpenRouter API (用于调用 Claude 3.5 Sonnet)
 NEXT_PUBLIC_OPENROUTER_API_KEY=your_openrouter_api_key
 
