--- a/.env.local.example
+++ b/.env.local.example
@@ -7,8 +7,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 # 示例：visual_clause, site_alpha, site_beta
 NEXT_PUBLIC_SITE_KEY=visual_clause
 
-# OpenRouter API (用于调用 Claude 3.5 Sonnet)
-NEXT_PUBLIC_OPENROUTER_API_KEY=your_openrouter_api_key
+# OpenRouter API (服务端使用)
+OPENROUTER_API_KEY=your_openrouter_api_key
 
 # fal.ai 配置 (第二阶段使用)
 # NEXT_PUBLIC_FAL_API_KEY=your_fal_api_key
