--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
     "@supabase/supabase-js": "^2.39.0",
+    "framer-motion": "^12.24.0",
     "lucide-react": "^0.344.0",
-    "openai": "^4.28.0"
+    "next": "^14.2.0",
+    "openai": "^4.28.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
